--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
 
 @theme {
-  --color-primary: oklch(0.1 0.2 221.19);
-  --color-secondary: oklch(0.76, 0.43, 223.12)
-  --color-fonts: oklch(0.76, 0.43, 223.12)
+  --color-bgColor: oklch(0.1 0.1 221.19);
+  --color-primaryColor: oklch(0.2 0.2 221);
+  --color-secondaryColor: oklch(0.5 0.5 221);
+  --color-fonts: oklch(0.76, 0.43, 223.12);
+  --font-inter: "Inter";
+}
+
+body {
+  font-family: Inter;
 }
