--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,36 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
-
-@theme {
-  --color-buttonBg: oklch(0.1 0.1 221.19); /* bg for btns */
-  --color-backgroundSecond: oklch(0.97 0.02 250); /* bg for pop outs */
-  --color-surfaceColor: oklch(0.93 0.03 250); /* main page bg */
-
-  --color-primaryColor: oklch(0.2 0.2 221);
-  --color-secondaryColor: oklch(0.5 0.5 221);
-  --color-thirdColor: oklch(0.1 0.3 195);
-  --color-thirdColorBright: oklch(0.1 0.5 195);
-  /* FONTS */
-  --color-fonts: oklch(0.25 0.03 250); /* dark gray-blue text */
-  --color-headingFonts: oklch(0.2 0.05 250); /* stronger heading contrast */
-  /* TEST */
-  /* Brand / Primary */
-  --color-primaryColor: oklch(0.58 0.16 260); /* button blue */
-  --color-primaryColor-light: oklch(0.75 0.1 260); /*lighter hover blue btn */
-  --color-primaryColor-dark: oklch(0.45 0.18 260); /* darker focus blue btn */
-
-  /* Secondary / Accent */
-  --color-secondaryColor: oklch(0.72 0.14 190); /* teal accent */
-  --color-secondaryColor-bright: oklch(0.85 0.12 190); /* soft aqua highlight */
-
-  /* Tertiary / Supporting */
-  --color-thirdColor: oklch(0.55 0.09 340); /* light pink */
-  --color-thirdColorBright: oklch(0.65 0.15 340);
-
-  /* TEST */
-  --color-headingFonts: oklch(0.5, 0.6, 100.12);
-  --font-inter: "Inter";
-}
 /* 
 @theme {
   /* Backgrounds */
@@ -58,6 +27,39 @@
   --font-inter: "Inter";
 } */
 
+@theme {
+  --color-buttonBg: oklch(0.1 0.1 221.19); /* bg for btns     DARK     */
+  --color-bgSecond: oklch(0.97 0.02 250); /* bg for pop outs /     WHITE     */
+  --color-surfaceColor: oklch(
+    0.93 0.03 250
+  ); /* main page bg /   LIGHT BLUE     */
+
+  --color-primaryColor: oklch(0.2 0.2 221) /* BLUE */;
+  --color-secondaryColor: oklch(0.5 0.5 221) /* TURKIZ */;
+  --color-thirdColor: oklch(0.1 0.3 195) /* PINK */;
+  --color-thirdColorBright: oklch(0.1 0.5 195) /* PINK BRIGHT */;
+  /* FONTS */
+  --color-fonts: oklch(0.25 0.03 250); /* dark gray-blue text */
+  --color-headingFonts: oklch(0.2 0.05 250); /* stronger heading contrast */
+  /* TEST */
+  /* Brand / Primary */
+  --color-primaryColor: oklch(0.58 0.16 260); /* button blue */
+  --color-primaryColor-light: oklch(0.75 0.1 260); /*lighter hover blue btn */
+  --color-primaryColor-dark: oklch(0.45 0.18 260); /* darker focus blue btn */
+
+  /* Secondary / Accent */
+  --color-secondaryColor: oklch(0.72 0.14 190); /* teal accent */
+  --color-secondaryColor-bright: oklch(0.85 0.12 190); /* soft aqua highlight */
+
+  /* Tertiary / Supporting */
+  --color-thirdColor: oklch(0.55 0.09 340); /* light pink */
+  --color-thirdColorBright: oklch(0.65 0.15 340);
+
+  /* TEST */
+  --color-headingFonts: oklch(0.5, 0.6, 100.12);
+  --font-inter: "Inter";
+}
+
 body {
   font-family: Inter;
 }
@@ -68,8 +70,10 @@ body {
 .nav-row-second {
   @apply border border-black
         shadow-xl shadow-secondaryColor/15
-      bg-secondaryColor rounded-xl p-3 flex justify-center items-center flex-col px-10
-      hover:translate-y-[-8px] hover:scale-110 transition-all duration-200 hover:bg-secondaryColor-bright
+        text-buttonBg/90
+      bg-bgSecond rounded-xl p-3 flex justify-center items-center flex-col px-10
+      hover:translate-y-[-8px] hover:scale-110 transition-all duration-200 
+      hover:bg-primaryColor-light
       hover:shadow-secondaryColor/30;
 }
 
