--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -114,3 +114,11 @@ body {
 .select {
   @apply bg-primaryColor/50 rounded-lg w-full h-full text-white;
 }
+
+.tableHeadBox {
+  @apply px-4 py-2 border border-gray-700 text-left;
+}
+
+.tableRowBox {
+  @apply px-4 py-2 border border-gray-700;
+}
